# spazio_alfieri_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
api-specs/: crontap.json
entity/: Cargo.toml
entity/src/entities/: entry.rs  mod.rs  newsletter.rs  prelude.rs  program.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240930_105435_newsletter_created_at.rs
src/: crontap.rs  main.rs  parser.rs
src/resources/: date_entry.pest  subject_line.pest
tests/resources/: test1.html
