[package]
name = "spazio_alfieri_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["macros"] }
teloxide = { version = "0.13.0", features = ["macros"]}
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
