[package]
name = "spazio_alfieri_bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["macros", "form"] }
teloxide = { version = "0.13.0", features = ["macros"]}
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
scraper = "0.20.0"
chrono = "0.4.38"
chrono-tz = "0.10.0"
regex = "1.10.6"
tracing-test = "0.2.5"
itertools = "0.13.0"
pest = "2.7.13"
pest_derive = "2.7.13"
dotenvy = "0.15.7"
hex = "0.4.3"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono" ] }
entity = { path = "entity" }
migration = { path = "migration" }
axum-auth = "0.7.0"
