[package]
name = "spazio_alfieri_bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros", "form"] }
teloxide = { version = "0.13.0", features = ["macros"]}
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
scraper = "0.22.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
regex = "1.11"
tracing-test = "0.2.5"
itertools = "0.14.0"
pest = "2.7"
pest_derive = "2.7"
dotenvy = "0.15.7"
hex = "0.4.3"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono" ] }
entity = { path = "entity" }
migration = { path = "migration" }
axum-auth = "0.8.1"
futures = "0.3"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }
